# nsfw-api

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: devskim.yml  rust.yml
src/: main.rs
