[package]
name = "nsfw-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "1.0.0"
hyper = { version = "0.14.27", features = ["full"] }
image = "0.25.6"
reqwest = "0.12.18"
serde = "1.0.219"
serde_derive = "1.0.152"
tokio = { version = "1.45.1", features = ["full"] }
tract-onnx = "0.21.12"
url = "2.5.4"
