[package]
name = "nsfw-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
confy = "2.0.0"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["server", "http1", "tokio"] }
image = "0.25.6"
reqwest = "0.13.4"
serde = "1.0.219"
serde_derive = "1.0.152"
tokio = { version = "1.47.1", features = ["full"] }
tract-onnx = "0.21.12"
url = "2.5.4"
